<resources>
    <string name="app_name">Just Java</string>
    <string name="enterName">Please enter your name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total: </string>
    <string name="summaryQuantity">Quantity: </string>
    <string name="addChocolate">Add chocolate? </string>
    <string name="addWhipped">Add whipped cream? </string>
    <string name="name">Name: </string>
    <string name="orderFor">JustJava order for </string>
</resources>
